Layout has been completed for mobile. Removed the border of the toggle button.

--- a/css/church.css
+++ b/css/church.css
@@ -1,6 +1,6 @@
 .container-fluid.church {
 	/* background-color: blue; */
 	height: auto;
-	padding: 3rem;
+	padding: 4rem 1rem;
 	text-align: center;
 }
