--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -11,6 +11,8 @@
 
 .navbar-dark .navbar-nav .nav-link {
 	color: #808080;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 500;
 	margin-left: 1rem;
 	transition: color 0.2 ease-out;
 	-webkit-transition: color 0.2s ease-out;
@@ -18,6 +20,10 @@
 
 .navbar-dark .navbar-nav .nav-link:hover {
 	color: #000;
+}
+
+.navbar-dark .navbar-nav .nav-link:active {
+	color: #808080;
 }
 
 .fa-bars {
