--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -7,9 +7,7 @@
 	height: 100vh;
 	margin-bottom: 0;
 	text-align: center;
-	text-shadow: 1px 1px #bebebe;
 	position: relative;
-
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -20,6 +18,7 @@
 .jumbotron-h1 {
 	font-family: "Great Vibes", serif;
 	font-size: 4rem;
+	text-shadow: 1px 1px #bebebe;
 }
 
 .flex-2 {
@@ -28,10 +27,10 @@
 }
 
 .jumbotron-text {
-	align-self: flex-end;
 	font-family: "Gentium Basic", serif;
+	font-size: 1rem;
 	font-style: italic;
-	text-shadow: 1px 1px #bebebe;
+	text-shadow: 0.5px 0px #bebebe;
 }
 
 .jumbotron-rsvp {
