--- a/css/hotels.css
+++ b/css/hotels.css
@@ -4,10 +4,10 @@
 	text-align: center;
 }
 
-#hotels-h2 {
-	margin: 0;
-}
-
 .card {
 	margin-top: 2rem;
+}
+
+.card-website-link {
+	margin-right: 1rem;
 }
