Added optimized images

--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -1,5 +1,5 @@
 .flex-master {
-	background: url("../images/jumbotron/ivan_marilynn_front_mobile.jpg");
+	background: url("../images/jumbotron/ivan_marilynn_front_mobile.webp");
 	background-position: center center;
 	background-size: cover;
 	border-radius: 0;
