--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -1,5 +1,9 @@
 .navbar {
 	background-color: #fff;
+	border-style: solid;
+	border-color: transparent;
+	border-width: 0 0 0.1rem 0;
+	box-shadow: 0 0 2rem #303030;
 }
 
 .navbar-dark .navbar-toggler {
