--- a/css/hotels.css
+++ b/css/hotels.css
@@ -17,6 +17,13 @@
 	box-shadow: 0 0 2rem #303030;
 }
 
+.hotel-warning {
+	font-size: 0.8rem;
+	background-color: #efe7da;
+	border-radius: 0.3rem;
+	padding: 0.7rem;
+}
+
 .kayak-logo {
 	width: 7rem;
 	height: auto;
