--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,15 @@ h2 {
 	font-size: 3rem;
 	margin-bottom: 2rem;
 }
+
+.navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show > .nav-link {
+    color: #000;
+}
+
+/* .preload * {
+	transition: none !important;
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-ms-transition: none !important;
+	-o-transition: none !important;
+  } */
