--- a/css/travelInformation.css
+++ b/css/travelInformation.css
@@ -15,9 +15,38 @@
 }
 
 /* Desktop */
-@media (min-width: 64.01em) {
+@media (min-width: 151em) {
+	.container-fluid.travel-information {
+		padding: 12rem 45rem;
+	}
+}
+
+@media (min-width: 130.25em) and (max-width: 150.9em) {
+	.container-fluid.travel-information {
+		padding: 12rem 35rem;
+	}
+}
+
+@media (min-width: 107em) and (max-width: 130.24em) {
+	.container-fluid.travel-information {
+		padding: 12rem 25rem;
+	}
+}
+
+@media (min-width: 80.75em) and (max-width: 106.9em) {
+	.container-fluid.travel-information {
+		padding: 12rem 10rem;
+	}
+}
+
+@media (min-width: 64.01em) and (max-width: 80.74em) {
 	.container-fluid.travel-information {
 		padding: 12rem 20rem;
+	}
+}
+
+@media (min-width: 64.01em) {
+	.container-fluid.travel-information {
 		text-align: right;
 	}
 
