--- a/css/changeLanguageNotification.css
+++ b/css/changeLanguageNotification.css
@@ -4,22 +4,20 @@
 }
 
 #changeLanguageNotification {
-    background-color: #000000;
-	border-style: solid;
-	border-color: transparent;
-    color: #fff;
-    font-size: 0.7rem;
-    margin-top: 3.5rem;
+   background-color: rgb(0, 0, 0, 0.4);
+   color: #ffffff;
+   font-size: 0.7rem;
+   margin-top: 3.5rem;
 	padding: 0.5rem;
 	position: fixed;
-    width: 100%;
+   width: 100%;
 	z-index: 3;
     
-    /* Flexbox */
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-	justify-content: center;
+   /* Flexbox */
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: center;
 }
 
 #languageButton {
@@ -31,9 +29,9 @@
 }
 
 #selectLanguageEnglish {
-    color: #808080;
-	margin-right: 3rem;
-	text-decoration: none;
+   color: #808080;
+   margin-right: 3rem;
+   text-decoration: none;
 }
 
 #selectLanguageSpanish {
@@ -79,10 +77,14 @@
  }
 
  /* Remove language notification when it's a full size navbar */
- @media (min-width: 62em) {
+ @media (min-width: 75em) {
 	#changeLanguageNotification {
         display: none;
     }
+
+    .languageLinks.active {
+      border-bottom: #303030 0.2em solid;
+   }
 }
 
 .languageLinks.active {
