--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@ h2 {
     color: #000;
 }
 
+/* Animate.css */
+.animated {
+	padding-top: 0;
+	margin-bottom: 0;
+}
+
 /* .preload * {
 	transition: none !important;
 	-webkit-transition: none !important;
