--- a/css/footer.css
+++ b/css/footer.css
@@ -1,18 +1,19 @@
 .footer {
     background-color: #303030;
     color: #c5c5c5;
+    font-size: 0.9rem;
 	padding: 4rem 4rem;
-    text-align: center;
 
     /* Flexbox */
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
 #footer-header {
     font-weight: 600;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
@@ -73,38 +74,29 @@
 @media (min-width: 150em) {
 	.footer {
 		padding: 4rem 45rem;
-        align-items: flex-start;
 	}
 }
 
 @media (min-width: 130em) and (max-width: 150em) {
 	.footer {
 		padding: 4rem 35rem;
-        align-items: flex-start;
 	}
 }
 
 @media (min-width: 107em) and (max-width: 130em) {
 	.footer {
 		padding: 4rem 25rem;
-        align-items: flex-start;
 	}
 }
 
 @media (min-width: 80em) and (max-width: 107em) {
 	.footer {
 		padding: 4rem 10rem;
-        align-items: flex-start;
 	}
 }
 
 @media (min-width: 64.01em) and (max-width: 79.99em) {
 	.footer {
 		padding: 4rem 20rem;
-        align-items: left;
-	}
-
-    #footer-header {
-		text-align: left;
-	}
+    }
 }
