--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -7,6 +7,32 @@
 	
 }
 
+/* Removes the default styling of the Bootstrap dropdown menu */
+.dropdown-item.active, .dropdown-item:active {
+    text-decoration: none;
+    background-color: transparent;
+}
+
+/* Changes the font weight of the links inside the dropdown menu  */
+.dropdown-item {
+	font-weight: 500;
+}
+
+/* When you click on Reception, the color stays gray inside of white */
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: #808080;
+}
+
+/* The drop down menu appears when you hover over the link */
+.dropdown:hover>.dropdown-menu {
+	display: block;
+}
+
+/* The drop down menu disappears if you try to access the links inside of it  */
+.dropdown-menu {
+	margin: -0.125rem 0 0;
+}
+
 .navbar-dark .navbar-toggler {
 	border-color: transparent;
 	color: #303030;
