--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -1,4 +1,5 @@
 .flex-master {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.308),rgba(0,0,0,0), rgb(0,0,0,0.308));
 	background: url("../images/jumbotron/ivan-marilynn-mobile-optimized.webp");
 	background-position: center center;
 	background-size: cover;
@@ -18,7 +19,7 @@
 .jumbotron-h1 {
 	font-family: "Great Vibes", serif;
 	font-size: 4rem;
-	text-shadow: 1px 1px #bebebe;
+	text-shadow: 2px 1px #aaaaaa;
 }
 
 .flex-2 {
@@ -30,7 +31,7 @@
 	font-family: "Gentium Basic", serif;
 	font-size: 1rem;
 	font-style: italic;
-	text-shadow: 1px 0px #bebebe;
+	text-shadow: 2px 0px #aaaaaa;
 }
 
 .jumbotron-rsvp {
