--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -31,7 +31,7 @@
 	font-family: "Gentium Basic", serif;
 	font-size: 1rem;
 	font-style: italic;
-	text-shadow: 2px 0px #aaaaaa;
+	text-shadow: 1px 0px #808080;
 }
 
 .jumbotron-rsvp {
