--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -7,6 +7,10 @@
 	
 }
 
+.navbar-toggler:focus {
+    box-shadow: none !important;
+}
+
 /* Removes the default styling of the Bootstrap dropdown menu */
 .dropdown-item.active, .dropdown-item:active {
     text-decoration: none;
@@ -41,6 +45,10 @@
 	margin-left: 1rem;
 	transition: color 0.2 ease-out;
 	-webkit-transition: color 0.2s ease-out;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus {
+	color: #000000 !important;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
