--- a/css/thingsToDo.css
+++ b/css/thingsToDo.css
@@ -1,106 +1,5 @@
-.main-image {
-    border-radius: 2rem;
-    display: block;
-    height: auto;
-    width: 100%;
-    max-width: 20rem;
-    min-width: 13rem;
-}
-
-.card-image {
-  border-radius: 2rem 2rem 0 0;
-}
-
-.card {
-  border: none !important;
-}
-
-.card:not(:last-child) {
-  margin-bottom: 2rem;
-}
-
-
-
-.row-of-cards {
-  /* border: solid 1px blue; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.overlay-card-text {
-  display:flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-
-  border: solid 1px #cccccc;
-  border-radius: 0 0 2rem 2rem;
-  height: 100%;
-}
-
-.overlay {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  background-color: #FFFFFF;
-  border-radius: 2rem;
-  bottom: 0;
-  font-size: 0.9rem;
-  height: auto;
-  left: 0;
-  max-width: 27rem;
-  min-width: 13rem;
-  opacity: 0;
-  position: absolute;
-  right: 0;
-  text-align: center;
-  top: 0;
-  transition: .5s ease;
-  width: 100%;
-}
-  
-.overlay:hover {
-  opacity: 1;
-}
-
-.overlay-video {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  background-color: #FFFFFF;
-  border-radius: 2rem;
-  bottom: 0;
-  font-size: 0.9rem;
-  height: auto;
-  left: 0;
-  max-width: 27rem;
-  min-width: 13rem;
-  opacity: 0;
-  position: absolute;
-  right: 0;
-  text-align: center;
-  top: 0;
-  transition: .5s ease;
-  width: 100%;
-}
-  
-.overlay-video:hover {
-  opacity: 1;
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
+h2 {
+  margin: 1.5rem 0 !important;
 }
 
 .ribbon {
@@ -132,7 +31,7 @@
   z-index: 999;
 }
 
-.ribbon .lunchDinnerRibbon {
+.ribbon .allDayRibbon {
   background-color: #82d7ff;
   color: #FFFFFF;
   z-index: 999;
@@ -164,6 +63,14 @@
 	left: 0.8rem;
 }
 
+.row {
+  height: 100%
+}
+
+img {
+  height: 100%;
+}
+
 /* Tablet */
 @media (min-width: 75em) {
 	.row-of-cards {
@@ -189,5 +96,17 @@
 @media (min-width: 33rem) and (max-width:75rem) {
   .main-image {
     max-width: 27rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .card-text {
+    padding-right: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .mb-3 {
+    margin-bottom: 2rem !important;
   }
 }
